test/success/unit/_succ_type_basic_1.hs
x :: Double
main = print "hello"