test/fail/integration/_fail_sem_decl_type_3.hs
x :: Int
x :: Double
main = print "hello"